--- a/Terms_3.3.html
+++ b/Terms_3.3.html
@@ -1,55 +1,64 @@
-<!-- MOODLE SAFE (no <script>) -->
-<!-- הדביקי את כל הבלוק לדף "תוכן מעוצב". אין CSS/JS חיצוני; הכל בתוך הבלוק. -->
+<!doctype html>
+<html lang="he" dir="rtl">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Terms_3.3 – Rabbi Sacks</title>
 
-<style>
-  /* הכל ממוסגר בתוך .vbt-terms כדי למנוע זליגה לשאר הדף */
-  .vbt-terms * { box-sizing: border-box; }
+  <!-- MOODLE SAFE (no <script>) -->
+  <!-- הדביקי את כל הבלוק לדף "תוכן מעוצב". אין CSS/JS חיצוני; הכל בתוך הבלוק. -->
 
-  /* קופסאות אקורדיון – גרסת checkbox כדי לאפשר אנימציה גם בסגירה */
-  .vbt-terms .vbt-acc { position: relative; border-radius: 18px; padding: 0; background: transparent; }
-  .vbt-terms .vbt-toggle { position: absolute; inset: 0; opacity: 0; pointer-events: none; }
+  <style>
+    /* הכל ממוסגר בתוך .vbt-terms כדי למנוע זליגה לשאר הדף */
+    .vbt-terms * { box-sizing: border-box; }
 
-  .vbt-terms .vbt-summary {
-    display: flex; align-items: center; gap: 12px; direction: rtl; cursor: pointer;
-    padding: 14px 18px; border-radius: 40px; background: #F8E8FF; font-weight: 800; font-size: 18px;
-    box-shadow: inset 0 1px 0 rgba(255,255,255,.6), inset 0 0 0 1px rgba(0,0,0,.04);
-    list-style: none; outline: none; transition: box-shadow .35s ease, transform .2s ease;
-  }
-  .vbt-terms .vbt-summary:hover { transform: translateY(-1px); }
-  .vbt-terms .vbt-summary:focus-visible { outline: 2px solid #fe0100; outline-offset: 2px; }
+    /* קופסאות אקורדיון – גרסת checkbox כדי לאפשר אנימציה גם בסגירה */
+    .vbt-terms .vbt-acc { position: relative; border-radius: 18px; padding: 0; background: transparent; }
+    .vbt-terms .vbt-toggle { position: absolute; inset: 0; opacity: 0; pointer-events: none; }
 
-  /* מצב פתוח – צל מעט חזק יותר */
-  .vbt-terms .vbt-toggle:checked + .vbt-summary {
-    box-shadow: 0 6px 16px rgba(0,0,0,.06), inset 0 1px 0 rgba(255,255,255,.6), inset 0 0 0 1px rgba(0,0,0,.04);
-  }
+    .vbt-terms .vbt-summary {
+      display: flex; align-items: center; gap: 12px; direction: rtl; cursor: pointer;
+      padding: 14px 18px; border-radius: 40px; background: #F8E8FF; font-weight: 800; font-size: 18px;
+      box-shadow: inset 0 1px 0 rgba(255,255,255,.6), inset 0 0 0 1px rgba(0,0,0,.04);
+      list-style: none; outline: none; transition: box-shadow .35s ease, transform .2s ease;
+    }
+    .vbt-terms .vbt-summary:hover { transform: translateY(-1px); }
+    .vbt-terms .vbt-summary:focus-visible { outline: 2px solid #fe0100; outline-offset: 2px; }
 
-  /* אייקון שמסתובב בפתיחה/בסגירה */
-  .vbt-terms .vbt-icon {
-    width: 28px; height: 28px; border-radius: 50%; background: #fe0100; color: #fff; display: grid;
-    place-items: center; font-weight: 900; transition: transform .35s ease;
-  }
-  .vbt-terms .vbt-toggle:checked + .vbt-summary .vbt-icon { transform: rotate(180deg); }
+    /* מצב פתוח – צל מעט חזק יותר */
+    .vbt-terms .vbt-toggle:checked + .vbt-summary {
+      box-shadow: 0 6px 16px rgba(0,0,0,.06), inset 0 1px 0 rgba(255,255,255,.6), inset 0 0 0 1px rgba(0,0,0,.04);
+    }
 
-  /* פנל תוכן – פייד אין/אאוט מלא + גלישה חלקה בגובה */
-  .vbt-terms .vbt-panel {
-    margin-top: 10px; background: #D7F6E4; border-radius: 14px; padding: 0 16px; line-height: 1.55;
-    max-height: 0; overflow: hidden; opacity: 0; transform: translateY(-6px);
-    transition: max-height .5s ease, opacity .45s ease, transform .45s ease, padding .45s ease;
-  }
-  .vbt-terms .vbt-toggle:checked ~ .vbt-panel {
-    padding: 16px; opacity: 1; transform: translateY(0); max-height: 1200px; /* מספיק לרוב התכנים */
-  }
+    /* אייקון שמסתובב בפתיחה/בסגירה */
+    .vbt-terms .vbt-icon {
+      width: 28px; height: 28px; border-radius: 50%; background: #fe0100; color: #fff; display: grid;
+      place-items: center; font-weight: 900; transition: transform .35s ease;
+    }
+    .vbt-terms .vbt-toggle:checked + .vbt-summary .vbt-icon { transform: rotate(180deg); }
 
-  /* גריד רספונסיבי */
-  .vbt-terms .vbt-grid {
-    display: grid; grid-template-columns: repeat(auto-fit, minmax(320px,1fr)); gap: 18px; max-width: 1000px; margin: 0 auto;
-  }
+    /* פנל תוכן – פייד אין/אאוט מלא + גלישה חלקה בגובה */
+    .vbt-terms .vbt-panel {
+      margin-top: 10px; background: #D7F6E4; border-radius: 14px; padding: 0 16px; line-height: 1.55;
+      max-height: 0; overflow: hidden; opacity: 0; transform: translateY(-6px);
+      transition: max-height .5s ease, opacity .45s ease, transform .45s ease, padding .45s ease;
+    }
+    .vbt-terms .vbt-toggle:checked ~ .vbt-panel {
+      padding: 16px; opacity: 1; transform: translateY(0); max-height: 1200px; /* מספיק לרוב התכנים */
+    }
 
-  /* העדפת נגישות – פחות תנועה */
-  @media (prefers-reduced-motion: reduce) {
-    .vbt-terms .vbt-panel, .vbt-terms .vbt-icon, .vbt-terms .vbt-summary { transition: none; }
-  }
-</style>
+    /* גריד רספונסיבי */
+    .vbt-terms .vbt-grid {
+      display: grid; grid-template-columns: repeat(auto-fit, minmax(320px,1fr)); gap: 18px; max-width: 1000px; margin: 0 auto;
+    }
+
+    /* העדפת נגישות – פחות תנועה */
+    @media (prefers-reduced-motion: reduce) {
+      .vbt-terms .vbt-panel, .vbt-terms .vbt-icon, .vbt-terms .vbt-summary { transition: none; }
+    }
+  </style>
+</head>
+<body style="margin:0;">
 
 <div class="vbt-terms" dir="rtl" style="max-width:1120px;margin:0 auto;font-family: Alef,-apple-system,'Segoe UI',Arial,sans-serif;color:#0f172a;">
 
@@ -128,8 +137,46 @@
       </div>
     </div>
 
-
-    </div>
-
   </div>
 </div>
+
+<!-- Auto-Resize (ילד): מודד גובה ושולח להורה גם בפתיחה וגם בסגירה -->
+<script>
+(function () {
+  function computeHeight(){
+    var b = document.body, d = document.documentElement;
+    return Math.max(d.scrollHeight, b.scrollHeight, d.offsetHeight, b.offsetHeight, d.clientHeight, b.clientHeight);
+  }
+  function sendHeight(){ parent.postMessage({ type: 'termsHeight', height: Math.ceil(computeHeight()) }, '*'); }
+  function burst(ms){ var end=Date.now()+(ms||800); (function step(){ sendHeight(); if(Date.now()<end) requestAnimationFrame(step); })(); }
+
+  if ('ResizeObserver' in window) {
+    var ro = new ResizeObserver(function(){ requestAnimationFrame(sendHeight); });
+    ro.observe(document.documentElement);
+    ro.observe(document.body);
+    var root = document.querySelector('.vbt-terms'); if (root) ro.observe(root);
+    var grid = document.querySelector('.vbt-grid'); if (grid) ro.observe(grid);
+    document.querySelectorAll('.vbt-panel, .vbt-summary').forEach(function(el){ ro.observe(el); });
+  }
+  if ('MutationObserver' in window) {
+    var mo = new MutationObserver(function(){ setTimeout(sendHeight, 80); });
+    mo.observe(document.documentElement, { attributes:true, childList:true, subtree:true });
+  }
+
+  function tick(){ requestAnimationFrame(sendHeight); }
+  window.addEventListener('DOMContentLoaded', tick);
+  window.addEventListener('load', tick);
+  window.addEventListener('transitionrun', function(){ burst(700); }, true);
+  window.addEventListener('transitionend', function(){ setTimeout(sendHeight, 80); }, true);
+  window.addEventListener('change', function(e){ if (e.target && e.target.classList && e.target.classList.contains('vbt-toggle')) burst(800); }, true);
+  window.addEventListener('click', function(){ setTimeout(sendHeight, 140); }, true);
+
+  var hb = setInterval(sendHeight, 1800);
+  window.addEventListener('pagehide', function(){ clearInterval(hb); });
+
+  sendHeight();
+})();
+</script>
+
+</body>
+</html>
